# spade-upload

./: Cargo.toml  LICENSE  README.md
man/: spade-upload.1
spade-serial/: Cargo.toml  README.md
spade-serial/src/: lib.rs
spade-serial/tests/: legacy.rs  upload.rs
spade-upload/: Cargo.toml  README.md
spade-upload-cli/: Cargo.toml
spade-upload-cli/src/: main.rs
spade-upload/src/: main.rs
