[package]
name = "spade-serial"
version = "0.1.0"
edition = "2021"
description = "Communications with Sprig devices over serial port"
authors = ["Jomar Milan"]
repository = "https://github.com/MacaylaMarvelous81/spade-upload"
keywords = ["spade", "sprig", "hackclub"]
license = "MIT"

[dependencies]

[dev-dependencies]
serialport = "4.6.1"
serial_test = "3.2.0"
